updated app packaging: separate Linux and Windows packages with minified JRE